# llm_suite

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
artifacts/sample_run/: summary.json  summary.md
configs/backends/: onnx_runtime.yaml  tensorrt_llm.yaml  vllm.yaml
configs/costs/: default.yaml
configs/profiles/: ci-smoke.yaml  gpu-dev.yaml  local-demo.yaml  perf-lab.yaml
configs/thresholds/: default.yaml
data/golden/: golden_regression.jsonl
data/sample/: classification.jsonl  qa.jsonl  summarization.jsonl
docker/: docker-compose.yml
scripts/: mock_tensorrt_runner.py  run_onnx_benchmark.py
src/llm_benchmark_suite/: __init__.py  cli.py  config.py  logging_utils.py
src/llm_benchmark_suite/adapters/: base.py  factory.py  onnx_runtime.py  tensorrt_llm.py  vllm.py
src/llm_benchmark_suite/cost/: __init__.py  model.py
src/llm_benchmark_suite/evaluators/: quality.py
src/llm_benchmark_suite/metrics/: text.py
src/llm_benchmark_suite/orchestration/: __init__.py  runner.py
src/llm_benchmark_suite/regressions/: __init__.py  checks.py
src/llm_benchmark_suite/reports/: generator.py
src/llm_benchmark_suite/schemas/: models.py
src/llm_benchmark_suite/utils/: io.py  system.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_cost.py  test_end_to_end.py  test_metrics.py  test_regressions.py  test_reports.py
